<resources>
    <string name="app_name">Chemistry</string>
    <string name="app_label">Chemistry</string>
    <string name="search_hint">Search formulas</string>
    <string name="title_activity_compound_results">Compound Results</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Chemistry</string>
    <string name="also_known_as">"Also known as: "</string>
    <string name="formula">"Formula: "</string>
    <string name="molar_mass">"Molar mass: "</string>
    <string name="unknown_compound">Not Listed/Unknown</string>
    <string name="compound_elements_header">Elements</string>
    <string name="help_text">This is the help text, right now it does not offer much help</string>
    <string name="compoundsearchbuttontext">Compound Search</string>
    <string name="tablebuttontext">Periodic Table</string>
    <string name="helpbuttontext">Help</string>
    <string name="converterbuttontext">Unit Converter</string>
    <string name="elementsbuttontext">Elements</string>

    <string name="title_activity_mole">MoleActivity</string>
    <string name="splash_screen">Splash screen</string>
    <string name="contactbuttontext">Contact Us</string>
    <string name="send_button">send</string>
    <string name="contactmessagehint">fix this, implement this, you\'re doing a good job, etc</string>
    <string name="contactsubjecthint">subject</string>

    <string-array name="converstionTypes">
        <item>Area</item>
        <item>Density</item>
        <item>Length</item>
        <item>Mass</item>
        <item>Pressure</item>
        <item>Temperature</item>
        <item>Volume</item>
    </string-array>
    <string-array name="areaUnits">
        <item>Acre</item>
        <item>Hectare</item>
        <item>Sq Metre</item>
        <item>Sq Centimetre</item>
        <item>Sq Millimetre</item>
        <item>Sq Kilometre</item>
        <item>Sq Mile</item>
        <item>Sq Inch</item>
        <item>Sq Foot</item>
        <item>Sq Yard</item>
    </string-array>
    <string-array name="lengthUnits">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Picometre</item>
        <item>Nanometre</item>
        <item>Micrometre</item>
        <item>Millimetre</item>
        <item>Centimetre</item>
        <item>Decimetre</item>
        <item>Metre</item>
        <item>Kilometre</item>
        <item>Megametre</item>
        <item>Gigametre</item>
    </string-array>
    <string-array name="massUnits">
        <item>Ounce</item>
        <item>Pound</item>
        <item>Atomic Mass Unit/Dalton</item>
        <item>Gram</item>
        <item>Milligram</item>
        <item>Kilogram</item>
        <item>Metric Fuck Ton</item>
    </string-array>
    <string-array name="pressureUnits">
        <item>Atmosphere</item>
        <item>Torr</item>
        <item>Pascal</item>
        <item>Kilopascal</item>
        <item>Millimetre of Mercury</item>
        <item>Pounds per Sq Inch</item>
    </string-array>
    <string-array name="volumeUnits">
        <item>Cubic Metre</item>
        <item>Cubic Centimetre</item>
        <item>Cubic Millimetre</item>
        <item>Cubic Kilometre</item>
        <item>Litre</item>
        <item>Gallon</item>
        <item>Quart</item>
        <item>Cup</item>
        <item>Pint</item>
        <item>Cubic Feet</item>
        <item>Millilitre</item>
        <item>Kilolitre</item>
    </string-array>
    <string-array name="temperatureUnits">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
</resources>
